# TameshiLSP

./: .gitattributes  .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: release.yml  test.yml
src/: config.rs  correlation.rs  deterministic_scanner.rs  diagnostics.rs  export.rs  findings_store.rs  lib.rs  llm_scan_manager.rs  llm_scanner.rs  main.rs  proto.rs  server.rs  workspace.rs
src/scan/: errors.rs  messages.rs  mod.rs  stats.rs
