[package]
name = "tameshi-lsp"
version = "0.1.0"
edition = "2021"

[lib]
name = "tameshi_lsp"
path = "src/lib.rs"

[[bin]]
name = "tameshi-lsp"
path = "src/main.rs"

[dependencies]
tameshi-scanners = { path = "../tameshi/crates/scanners", features = ["llm"] }
thalir-core = "0.1.0"
thalir-emit = "0.1.0"
thalir-transform = "0.1.0"
lsp-server = "0.7"
lsp-types = "0.95"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
dashmap = "5.5"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
llm = []
